...
            Curtis
          </Text>
        </Text>
        <Logo.Welcome style={eva.style.logo} />
        <Button
          style={eva.style.button}
          testID="WelcomeView.SignInButton"
          onPress={() => navigation.navigate('Sign In')}
        >
          Sign in
        </Button>
        <Text style={eva.style.hint} appearance="hint">
          Or, if you don&apos;t have an account
        </Text>
        <Button
          testID="WelcomeView.SignUpButton"
          onPress={() => navigation.navigate('Sign Up')}
          appearance="outline"
        >
          Sign up
        </Button>
      </Wrapper>
...
