...
        <View style={eva.style.form}>
          <Input
            size="large"
            value={email}
            style={eva.style.input}
            label={() => <FormLabel title="E-mail" />}
            testID="SignInView.EmailInput"
            disabled={isLoading}
            keyboardType="email-address"
            onChangeText={(newEmail) => setEmail(newEmail)}
            autoCapitalize="none"
          />
          <Input
            size="large"
            value={password}
            style={eva.style.input}
            label={() => <FormLabel title="Password" />}
            testID="SignInView.PasswordInput"
            disabled={isLoading}
            onChangeText={(newPassword) => setPassword(newPassword)}
            accessoryRight={({ ...rest }) => (
              <TouchableWithoutFeedback
                onPress={() => setIsSecureTextEntry(!isSecureTextEntry)}
              >
...
              Forgot your password?
            </Text>
          </TouchableWithoutFeedback>
        </View>
        <Button
          style={eva.style.button}
          testID="SignInView.SignInButton"
          onPress={() =>
            dispatch(
              signIn(email, password, (err) => {
                if (err) {
                  Alert.alert('Error', err.message);
                }
...
