...
        testID="ProfileView.SignOutDialog.NoButton"
        onPress={() => onNo()}
      />
      <Dialog.Button
        label="Yes"
        style={{ color: 'red' }}
        testID="ProfileView.SignOutDialog.YesButton"
        onPress={() => onYes()}
      />
    </Dialog.Container>
  </View>
);

...
            disabled={isLoading}
          >
            Edit
          </Button>
          <Button
            style={eva.style.editButton}
            testID="ProfileView.SignOutButton"
            onPress={() => setIsSignOutDialogVisible(true)}
            disabled={isLoading}
            appearance="outline"
          >
            Sign out
          </Button>
...
